# OpenGLAbstractions

./: .gitignore  CMakeLists.txt  README.md  styleguide.h
OpenGLAbstractions/: CMakeLists.txt
OpenGLAbstractions/includes/: Context.h  IndexBuffer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
OpenGLAbstractions/includes/glad/glad/: glad.h
OpenGLAbstractions/src/: Context.cpp  IndexBuffer.cpp  Main.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
includes/: IndexBuffer.h
includes/opengl_abstractions/: context.h  index_buffer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
src/: CMakeLists.txt  Context.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  context.cpp  index_buffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
